--- a/posts/2016-08-16.md
+++ b/posts/2016-08-16.md
@@ -10,7 +10,7 @@ This lack of clarity leads to confusion when people speak of things "not providi
 
 Let's take as an example the [Privacy in Pharmacogenetics](https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-fredrikson-privacy.pdf) paper, which [we previously discussed](). The paper describes an attack, *model inversion*, which predicts genenic markers through access to (i) other private data of yours, and (ii) correlations observed in other people between their genetic markers and their corresponding private data. They conclude that the disclosure of (ii) the correlations, again involving only the data of people not you, constitute an attack on your private data. 
 
-Nothing written above is wrong in the factual sense, but it is rhetorically misleading. An attacker may indeed be able to learn about your private data, but it is in the same sense that someone who sees you in public may be able to make a guess about your weight. Although this could be annoying, should we call the understanding of the general correlation between size and weight a "privacy attack"? Is it really no different than revealing the same information directly from your most recent medical examination, which we likely *would* view as a breach of privacy? Should we distinguish these two, so that we might prevent one and worry less about the other?
+Nothing written above is wrong in the factual sense, but it is rhetorically misleading. An attacker may indeed be able to learn about your private data, but it is in the same sense that someone who sees you in public may be able to make a guess about your weight. Although this could be annoying, should we call the understanding of the general correlation between size and weight a "privacy attack"? Is it really no different than revealing the same information directly from your most recent medical examination, which we likely *would* view as a breach of privacy? Should we perhaps distinguish these two, so that we might prevent one and worry less about the other?
 
 There is a valueable difference between "your secrets" and "secrets about you". As a society we place great value on one's right to self-determination, and somewhat less value on one's right to image management. We value one's ability to keep what secrets they have, but find it perhaps less reasonable to demand ignorance of others, even about one's self. If we must trade away some secrets for accurate statistics in the common interest, it is helpful to distinguish these two types of secrets we might be trading away, and it may be harmful to fail to distinguish them. We can (and should) argue about the relative costs and benefits of keeping each type of secret, but we must distinguish between them to have meaningful discussions.
 
