--- a/posts/2016-08-16.md
+++ b/posts/2016-08-16.md
@@ -18,7 +18,7 @@ Differential privacy is a formal distinction between "your secrets" and "secrets
 
 Implementations of differential privacy formally demonstrate that you do *not* need to trade away any of "your secrets" to get some accurate statistical information. On the other hand, it does not guarantee that any "secret about you" remains (or indeed ever was) a secret, for the very important reason that such a guarantee is generally impossible.
 
-We are going to go a bit deeper on each of these points, and circle round to the No Free Lunch paper and its implications for data privacy generally, and differential privacy in particular. The authors claim to address misconceptions about differential privacy, but I worry that the introduce misconceptions of their own instead.
+We are going to go a bit deeper on each of these points, and circle round to the No Free Lunch paper and its implications for data privacy generally, and differential privacy in particular. The authors claim to address misconceptions about differential privacy, but I worry that they introduce misconceptions of their own instead.
 
 ## No Free Lunch
 
