Squashed commit of the following:
commit 07d1ed737d0b24bbc432f9ac720df067c2da140d
Author: Frank McSherry <fmcsherry@me.com>
Date:   Fri Aug 26 19:38:13 2016 +0100

    link added

commit 01f86305d7fb7092d5c8cb43f92f310714ce4936
Author: Frank McSherry <fmcsherry@me.com>
Date:   Tue Aug 23 16:52:45 2016 +0100

    massive edits

commit 7c372fae3471b514272ff8c43776a58c2e0258fc
Author: Frank McSherry <fmcsherry@me.com>
Date:   Tue Aug 23 16:50:51 2016 +0100

    massive edits

commit 9a97616db012a73a694acb8b6eddc7fe902dc838
Author: Frank McSherry <fmcsherry@me.com>
Date:   Tue Aug 23 16:45:37 2016 +0100

    massive edits

commit 7314192a1b3ff5ed7fc956671e6632f9902e116d
Author: Frank McSherry <fmcsherry@me.com>
Date:   Tue Aug 23 16:38:04 2016 +0100

    massive edits

commit f171027976856c14d3584b1462176e3670cbed8e
Author: Frank McSherry <fmcsherry@me.com>
Date:   Tue Aug 23 16:24:55 2016 +0100

    massive edits

commit bf13652ce7bcadc5e9eb93fc56cd5dd42377474a
Author: Frank McSherry <fmcsherry@me.com>
Date:   Sat Aug 20 13:42:43 2016 +0100

    lunch

commit 3ca7906833c85b55e3a69fbc79dcd495b254c0ce
Author: Frank McSherry <fmcsherry@me.com>
Date:   Sun Aug 7 21:20:50 2016 -0400

    part 4

commit 89e7f1e4fb585f57f3047938b57b4e0070de9a41
Author: Frank McSherry <fmcsherry@me.com>
Date:   Sun Aug 7 10:04:34 2016 -0400

    addendum

commit b5c14084f68f83a7b36e64fb977cb662f2b4a5b7
Author: Frank McSherry <fmcsherry@me.com>
Date:   Sun Aug 7 01:57:07 2016 -0400

    errata typo; geez

commit 40817913599c7e0a565074069695ec9f044003a7
Author: Frank McSherry <fmcsherry@me.com>
Date:   Sun Aug 7 01:47:34 2016 -0400

    errata

commit 9b451bf024110718107ab22aee3e4bb7549a5e3d
Author: Frank McSherry <fmcsherry@me.com>
Date:   Sat Aug 6 23:25:06 2016 -0400

    part 3 edits

commit e72aee45b6d7eb2f510e29f8a53f33f0eab45c0c
Author: Frank McSherry <fmcsherry@me.com>
Date:   Sat Aug 6 23:10:13 2016 -0400

    part 3

commit 3d624cf8fd12668c9472d723da5e660db788a5e8
Author: Frank McSherr

--- a/posts/2015-07-08.md
+++ b/posts/2015-07-08.md
@@ -91,7 +91,7 @@ This will be our first implementation, which we will quickly discard as being hi
 
 The figure below illustrates how this would proceed in a setting with four workers (_w<sub>0</sub>_ to _w<sub>3</sub>_) in two processes (**P<sub>0</sub>** and **P<sub>1</sub>**).
 
-![Na&iuml;ve no-aggregation implementation of distributed PageRank.]({{ site.url }}/assets/pr-naive.png)
+![Na&iuml;ve no-aggregation implementation of distributed PageRank.](https://github.com/frankmcsherry/blog/blob/master/assets/pr-naive.png)
 
 However, this approach needs to send some data across the network _for every edge in the graph_. That would certainly result in some serious communication,<sup><a name="fn2l" href="#fn2">2</a></sup> and 10G would look pretty good compared to 1G. However, we would only be able to conclude that a fairly na&iuml;ve implementation is communication-bound. Let's see if we can do better.
 
@@ -115,7 +115,7 @@ Because each worker only has edges from vertices `x` equal modulo `workers`, eac
 
 The figure below illustrates this: each worker merges updates for the same destination (bold number) into a single update. As a result, this example four-worker setup ends up exchanging only 12 messages, instead of 16 in the na&iuml;ve version.
 
-![Worker-level aggregation implementation of distributed PageRank.]({{ site.url }}/assets/pr-worker-agg.png)
+![Worker-level aggregation implementation of distributed PageRank.](https://github.com/frankmcsherry/blog/blob/master/assets/pr-worker-agg.png)
 
 Moreover, this approach also produces outputs as it goes, which allows workers to overlap communication with communication: a worker can start telling other workers about its updates right away, using the network at the same time as the rest of the computer.
 
@@ -126,7 +126,7 @@ The worker-level aggregation implementation (#2, above) is our best-performing i
 
 Again, the figure illustrates this: after we have aggregated updates at the worker level, we also aggregate them at the process level. In the example, this reduces the number of messages from 12 to 9.
 
-![Process-level aggregationo implementation of distributed PageRank.]({{ site.url }}/assets/pr-process-agg.png)
+![Process-level aggregationo implementation of distributed PageRank.](https://github.com/frankmcsherry/blog/blob/master/assets/pr-process-agg.png)
 
 We could potentially try and make this implementation even smarter, cutting computation and overlapping communication. However, as we will show in part two of our investigation, we cannot expect a 1G network to win out over 10G even with infinitely fast aggregation.
 
@@ -147,7 +147,7 @@ Before we start, let's think about existing baselines that should give some cont
 Below, we show previously reported measurements from Spark and GraphX, as well as the runtime of GraphX on our cluster, and the runtime of two single-threaded implementations (from [the COST paper](https://www.usenix.org/conference/hotos15/workshop-program/presentation/mcsherry)).
 
 <p align="center">
-<img src="{{ site.url }}/plots/pr-baselines.png">
+<img src="https://github.com/frankmcsherry/blog/blob/master/assets/plots/pr-baselines.png">
 </p>
 
 <center>
@@ -174,11 +174,11 @@ Is that bad news for distributed graph processing generally? Let's see.
 Let's take our data-parallel implementation out for a spin. We'll start with just a single machine, and move from one core to multiple cores. We measure the total elapsed time (first graph), and the average per-iteration time of the last ten iterations (second graph). For reference, we also show the results for GraphX, and the simple single-threaded implementations (as horizontal bars).
 
 <p align="center">
-<img src="{{ site.url }}/plots/pr-multithreaded.png">
+<img src="https://github.com/frankmcsherry/blog/blob/master/assets/plots/pr-multithreaded.png">
 </p>
 
 <p align="center">
-<img src="{{ site.url }}/plots/pr-multithreaded-periter.png">
+<img src="https://github.com/frankmcsherry/blog/blob/master/assets/plots/pr-multithreaded-periter.png">
 </p>
 
 <!-- ![End-to-end runtimes for multi-threaded timely dataflow PageRank]({{ site.url }}/plots/pr-multithreaded.png)
@@ -212,11 +212,11 @@ In addition to the worker-level aggregation implementation from above, we also i
 For each configuration, we again report the elapsed time to perform twenty iterations (first graph), and the average of the final ten iterations (second graph). Because GraphX and our implementation have different one-off start-up costs, the average iteration time when the computation is running is probably the fairest metric for comparison.
 
 <p align="center">
-<img src="{{ site.url }}/plots/pr-distributed.png">
+<img src="https://github.com/frankmcsherry/blog/blob/master/assets/plots/pr-distributed.png">
 </p>
 
 <p align="center">
-<img src="{{ site.url }}/plots/pr-distributed-periter.png">
+<img src="https://github.com/frankmcsherry/blog/blob/master/assets/plots/pr-distributed-periter.png">
 </p>
 
 <!-- ![End-to-end runtimes for distributed timely dataflow PageRank]({{ site.url }}/plots/pr-distributed.png)
