--- a/posts/2016-08-29.md
+++ b/posts/2016-08-29.md
@@ -66,19 +66,19 @@ The authors then consider two types of attacks: the data are independent, in whi
 
 At the moment this has nothing to do with differential privacy, because as mentioned you could just throw away the differentially private measurements and it wouldn't much change your posterior distributions. However, the authors do introduce a theorem relating differential privacy and "leaked information", the change in entropy due to showing someone all the other records (and the `centroids`).
 
-![Theorem](https://github.com/frankmcsherry/blog/blob/master/assets/vulnberable/theorem.png)
-
 ![Leaked](https://github.com/frankmcsherry/blog/blob/master/assets/vulnberable/leaked.png)
+
+![Theorem](https://github.com/frankmcsherry/blog/blob/master/assets/vulnberable/theorem.png)
 
 The authors do observe a substantial change in entropy due to revealing all other records, which makes sense if people hang out with their friends, and that plus this theorem would mean that differential privacy isn't doing its job.
 
 The theorem is incorrect. It is most easily seen by imagining what happens if the centroids had zero-differential privacy. They would contribute zero information, about anything, and so "leaked information" would simplify to  
 
-	avg_i ( H(Di) - H(Di | all except Di ) )
+	Leaked Information = avg_i ( H(Di) - H(Di | all except Di ) )
 
 The theorem says this should be zero. When there are correlations between `Di` and the other records it will not be.
 
-Here is the "detailed proof"
+Here is the "detailed proof" from the appendix:
 
 ![proof](https://github.com/frankmcsherry/blog/blob/master/assets/vulnberable/proof.png)
 
