--- a/posts/2016-08-29.md
+++ b/posts/2016-08-29.md
@@ -4,7 +4,7 @@ A recent [blog post](https://freedom-to-tinker.com/blog/pmittal/differential-pri
 
 > Differential Privacy is Vulnerable to Correlated Data
 
-The announced paper, [Dependence make you vulnerable]() continues a line of thought initiated in the [No Free Lunch](http://www.cse.psu.edu/~duk17/papers/nflprivacy.pdf) paper [we discussed just a post ago](): "differential privacy has limitations when applied to data that are not independent of one another". Unlike the previous works, this paper is brave enough to make falsifiable statements (those specific enough that they could in principle be disproved) about differential privacy. 
+The announced paper, [Dependence make you vulnerable](http://www.princeton.edu/~pmittal/publications/ddp-ndss16.pdf) continues a line of thought initiated in the [No Free Lunch](http://www.cse.psu.edu/~duk17/papers/nflprivacy.pdf) paper [we discussed just a post ago](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-16.md): "differential privacy has limitations when applied to data that are not independent of one another". Unlike the previous works, this paper is brave enough to make falsifiable statements (those specific enough that they could in principle be disproved) about differential privacy. 
 
 You can probably imagine what this post will be about.
 
@@ -14,13 +14,15 @@ After this we will get to what I took away from the paper, which is the importan
 
 This point, that your personal data may not be private data, is best seen through one of the authors' examples: genetic privacy. People's genomic data are correlated, massively. Some 98% of our genetic data is common to all people, meaning (I think) that I can correctly announce some 98% of your genome. Scary! That 98% may have been your *personal* genomic data, but it was not your *private* genomic data. 
 
-In the case of genomic data we do have some privacy expecations: we understand that the 98% common to people is not private information and no outrage is due if someone publishes it. On the other hand, 100% accuracy about your genome is, with present day technology, likely private and worth complaining about if disclosed. How did we come to these numbers, 98% and 100%, and how do we fill in the space between them a bit more crisply. 
+In the case of genomic data we do have some privacy expecations: we understand that the 98% common to people is not private information and no outrage is due if someone publishes it. On the other hand, 100% accuracy about your genome is, with present day technology, likely private and worth complaining about if disclosed. How did we come to these numbers, 98% and 100%, and how do we fill in the space between them a bit more crisply?
 
-I believe we should frame "expectations of data privacy" in terms of the difference between *personal* information and *private* information. Differential privacy provides one way to frame this distinction: secrets that can be kept even when you withhold your data are *private*.
+I believe we should frame "expectations of data privacy" in terms of the difference between *personal* information and *private* information. Differential privacy provides one way to frame this distinction: secrets that you can keep by withholding your data are *private*.
 
-Much of the hand-wringing about differential privacy and "correlated data" or "indepedent data generation" boils down to wishing that *personal* data were actually *private* data, when in fact it may not be (as I've defined things). The anxiety in the present paper is that your location data may be correlated with the data of others, allowing one to learn about your location from their data. This is creepy, and likely a "violation of privacy" in the social sense, but we need to distinguish this from the technical intent of *data* privacy; your data were not even part of the example, much less leaked through mishandling. 
+Much of the hand-wringing about differential privacy and "correlated data" or "indepedent data generation" boils down to wishing that *personal* data were actually *private* data, when in fact it may not be (as I've defined things). The anxiety in the present paper is that your location data may be correlated with the data of others, allowing one to learn about your location from their data. This is creepy, and likely a "violation of privacy" in the social sense, but we need to distinguish this from the technical intent of *data* privacy if we want to complain about either.
 
-By way of analogy, we use cryptography to protect our financial information, even though there is probably lots of correlation among our bank accounts. If I see you moving into your new house and call to ask about your mortgage, because often people with new houses have mortgages, have we violated the security guarantees of the cryptosystem the bank uses? Is it now time to write a paper: "cryptography vulnerable to correlated data", announcing that to provide its guarantees, modern cryptography assumes all messages are independent? Please don't. 
+By way of analogy, we use cryptography to protect our financial information, even though there is probably lots of correlation among our bank accounts. If I see you moving into your new house and call to ask about your mortgage, because often people with new houses have mortgages, have we violated the security guarantees of the cryptosystem your bank uses? Is it now time to write a paper: "cryptography vulnerable to correlated data", announcing that to provide its guarantees, modern cryptography assumes all messages are independent? Please don't.
+
+Cryptography provides the guarantee that access to encrypted information provides no new capabilities to an adversary; they can do as much with the encryption as without. Differential privacy provides the same flavor of guarantee; an adversary can do roughly the same things with and without access to your data. I think the main difference is that we've sorted out our expectations for cryptography, and still need to work on our expectations for data privacy.
 
 ## On words, which have meanings 
 
