--- a/posts/2016-09-17.md
+++ b/posts/2016-09-17.md
@@ -26,7 +26,7 @@ This is all joint work with [Khaled Ammar](https://khaledammar.com) and [Semih S
 
 There are some steps to follow to get where we need to go, so we will do this in parts. 
 
-1. [Motifs in graphs. What are they, and how might we compute them?]()
+1. [Motifs in graphs. What are they, and how might we compute them?](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#1-motifs-in-graphs)
 2. [Worst-case optimal join computation; the coolest thing to happen to joins in 40 years.]()
 3. [Streaming implementations of worst-case optimal join processing on static data.]()
 4. [Streaming implementations of worst-case optimal join processing on dynamic data.]()
