--- a/posts/2016-09-17.md
+++ b/posts/2016-09-17.md
@@ -227,6 +227,220 @@ Ok, cute hack. But does it apply to anything other than triangles? It does.
 
 ## 2. Worst-case optimal relational joins.
 
+Some recent very nice research by [Ngo et al](http://arxiv.org/abs/1310.3314) shook up the world of relational joins, or at least my view of them. There is a lot of crazy math and stuff, but the short version is that the neat trick up above with triangles applies to any old relational join you might like.
+
+**When evaluating a join, one can repeatedly introduce *attributes* rather than repeatedly introducing relations, and thereby substantially improve the worst-case work required.**
+
+What does this mean? In the triangles example we started with `x0` and `x1` and introduced `x2`. We did this by thinking holistically about `x2` rather than just by picking some relation that had an `x2` in it. We acted using both `edges(x0, x2)` *and* `edges(x1, x2)` at the same time, rather than one after the other.
+
+This idea generalizes to any relational query where we order the attributes, introduce values for each attribute by considering the candidates from each relation, and start from the relation proposing the smallest set of candidates.
+
+To demonstrate the ideas more clearly, let's think about directed four-cliques: sets of four nodes where all six edges exist.
+
+    four(x0, x1, x2, x3) := edge(x0, x1), edge(x0, x2), edge(x0, x3), 
+                            edge(x1, x2), edge(x1, x3), edge(x2, x3)
+
+This query is the same as the `triangles` query on the first three attributes: `x0`, `x1`, and `x2`. 
+
+The fourth attribute `x3` is different and has *three* relations that propose candidates based on the current values of `x0`, `x1`, and `x2`. This isn't fundamentally more complicated than with triangles, which has two sets of candidates, we just need a new `intersect` method that takes any number of lists of proposals (rather than just two). Here is a hypothetical implementation:
+
+```rust
+// returns the intersection of the supplied relations.
+fn intersect(mut candidates: &[&[u32]]) -> Vec<u32> {
+
+	// order `candidates` by number of candidates.
+	candidates.sort_by(|x,y| x.len().cmp(&y.len()));
+
+	// start with smallest number of candidates, intersect up.
+	let mut result = candidates[0].to_vec();
+	for other in 1 .. candidates.len() {
+		result.retain(|x| candidates[other].contains(x));
+	}
+
+	result
+}
+```
+
+The important property Ngo et al need `intersect` to have is that it should take time proportional to the smallest of the candidate sets. We do this by finding the smallest set, and then using it to drive intersection tests with the other sets of candidates. It *is* important that `contains` runs efficiently; in the Ngo et al paper they were cool with logarithmic, which works for me too. 
+
+There are even smarter ways of doing this, like what the LogicBlox folks did in ["leapfrog join"](https://developer.logicblox.com/2012/10/leapfrog-triejoin-a-worst-case-optimal-join-algorithm/), where you repeatedly advance the smallest of the heads of each of the lists, as long as some head is larger. 
+
+Now with this `intersect` at hand, we can write logic to count the number of directed four-cliques, which looks a lot like the code we used for directed triangles just with another nested loop, as:
+
+```rust
+let mut cliques = 0;
+for x0 in 0 .. graph.nodes {
+	for x1 in graph.edges(x0) {
+		let edges0 = graph.edges(x0);
+		let edges1 = graph.edges(x1);
+		for x2 in intersect(&[edges0, edges1]) {
+			let edges2 = graph.edges(x2);
+			for x3 in intersect(&[edges0, edges1, edges2]) {
+				cliques += 1;
+			}
+		}
+	}
+}
+```
+
+Each time we introduced a new attribute, here just `x2` and `x3`, we took each of the relations which constrain the new attribute based on existing attributes, looked up their candidate sets, and passed them as arguments to `intersect`. As long as `intersect` is smart and uses the smallest candidate set first, we get Ngo et al's sweet mathematical guarantees (time bounded by the most four-cliques there could be with as many edges as we have).
+
+### General graph motifs
+
+Up until this point we've been using motifs with some pleasant properties that made our life easy, without bringing these properties to light. Let's change the `four` query slightly and see how we might need to do a little more work for general queries:
+
+    four(x0, x1, x2, x3) :=               edge(x0, x2), edge(x0, x3), 
+                            edge(x1, x2), edge(x1, x3), edge(x2, x3)
+
+This is nearly identical to the four-cliques query, but we have removed the `edge(x0, x1)` edge. This .. complicates our "algorithm" as written above, because we can no longer just say "for each `x0`, for each `x1`" unless we want to consider all `x1` for each `x0`, and we don't. At the same time this is a totally legit graph motif / relational join, so how can we sort this out?
+
+There are two things we need to be able to do to deal with general motifs:
+
+1.	**We may need to re-order the variables.** 
+
+	The variable `x1` isn't constrained by `x0`, so we can't just add it after `x0` despite its name suggesting it should come next. Only the variables `x2` or `x3` are constrained by `x0`, and we will want to add one of them next, after which we could add either of the others. 
+
+	If the motif is *connected* then we can always order the variables so that when each is introduced it is constrained by at least one prior variable, using any graph traversal (e.g. DFS or BFS). If the motif isn't connected, we should instead find instances of its connected components and take their cross products.
+
+2.	**We may need to index `edges` by destination.** 
+
+	When we add `x1` it is constrained by `x2` and `x3`, but the constraint is not that both of them have an edge *to* `x1`, but rather that there is an edge *from* `x1` to each of them. This means that to get a list of candidates from `x2` and `x3`, we will need an index on the second element of the `edge` relation. The constraint on a prior variable may be in either the source or target position, and we need to index the relation in both directions (unless we know we don't need one direction).
+
+	Each relation may need to be indexed by any proper non-empty subset of its attributes. In the case of graphs this is pretty easy, because there are just two coordinates, and so two ways to index the graph. More generally we may need to build more indices.
+
+What's a better way to do things than simply speculating about what we might need to do? Actually doing it. Then we can see: does it work? 
+
+#### Re-ordering variables
+
+Let's imagine that the query is presented to us as a list `description` of pairs of attribute identifiers `(i,j)` each indicating the constraint `edges(x_i, x_j)`, as well as the index `start` of the attribute we'd like to start from. To order the variables we just need to repeatedly look at pairs in `description` and add any un-added variables once they become constrained:
+
+```rust
+// orders attributes from `start` so that each is constrained by a prior attribute.
+fn order_attributes(start: usize, description: &[(usize, usize)]) -> Vec<usize> {
+
+    let mut order = vec![start];
+    let mut done = false;
+    while !done {
+        done = true;
+        for &(src, dst) in description {
+            if order.contains(&src) && !order.contains(&dst) {
+                order.push(dst);
+                done = false;
+            }
+            if order.contains(&dst) && !order.contains(&src) {
+                order.push(src);
+                done = false;
+            }
+        }
+    }
+
+    order
+}
+```
+
+This allows us to re-map the attributes to their position in this list, so that we may safely just add them in order of the identifiers, `0 ..`. For what follows, let's imagine we've done that.
+
+#### Planning the query
+
+Our next step is to take our list `description` and turn it in to a list of constraints on each attribute, so that we can just read out which prior attributes to use to propose candidates (and whether they should use the forward or reverse index to do so). We will return this as list (one entry for each attribute) of a list of pairs of (i) attribute identifiers and (ii) `bool`s which indicate forward index or not (else, the reverse index).
+
+```rust
+// indicates for each attribute which prior attributes constrain it, and how.
+fn plan_query(description: &[(usize, usize)]) -> Vec<Vec<(usize, bool)>> {
+
+	let mut plan = vec![];
+
+	// for each attribute, determine relations constraining that attribute.
+	for attribute in 1 .. {
+		let mut constraints = vec![];
+		for &(src, dst) in description {
+			if src == attribute && dst < attribute {
+				constraints.push((dst, false));
+			}
+			if dst == attribute && src < attribute {
+				constraints.push((src, true));
+			}
+		}
+		// add the constraints; return when done.
+		if constraints.len() > 0 {
+			plan.push(constraints);
+		}
+		else {
+			return plan;
+		}
+	}
+}
+```
+
+This is great! Now we have a "query plan", which tells us as we extend some binding of a prefix of the attributes, which of these bindings we need to use to produce candidates for the subsequent attributes. This is similar to a traditional relational query plan but different in some important ways, for example it will let us compute directed triangles in less than two weeks.
+
+#### Suturing things together
+
+Let's put these bits of code together into a general motif finding framework. We will start by planning out the query (step `1`). We then loop through each value for `x0` to initialize our working set `bindings` of solutions (step `2`). Finally, and the hardest part, for each attribute we extend each element of our working set of solutions by looking up candidate extension sets and intersecting them (step `3`).
+
+```rust
+// reports all bindings of node ids to variables in `description`.
+fn motifs(forward: &[&[u32]], reverse: &[&[u32]], description: &[(usize, usize)]) -> Vec<Vec<u32>> {
+
+	// 1. determine how to extend each attribute
+	let plan = plan_query(description);
+
+	// 2. start things out with `x0`
+	let mut bindings = vec![];
+	for x0 in 0 .. graph.len() {
+		bindings.push(vec![x0]);
+	}
+
+	// 3. extend each attribute (starting at `x2`).
+	for constraints in plan {
+		// assemble extended bindings
+		let mut new_bindings = vec![];
+		for binding in &bindings {
+
+			// a. assemble candidate extensions
+		 	let mut candidates = vec![];
+		 	for (idx, is_forward) in &constraints {
+		 		if is_forward {
+			 		candidates.push(forward[binding[idx]]);
+			 	}
+			 	else {
+			 		candidates.push(reverse[binding[idx]]);
+			 	}
+		 	}
+
+		 	// b. intersect candidates to find valid extensions
+		 	let extensions = intersect(&candidates);
+
+		 	// c. create an extended binding for each extension.
+		 	for extension in extensions {
+		 		let mut clone = binding.clone();
+		 		clone.push(extension)
+		 		new_bindings.push(clone);
+		 	}
+		}
+	}
+}
+```
+
+That is a bit of an eye-full, but I hope the first two steps at least should be clear. 
+
+The third step proceeds through each of the attributes, and takes each of the proposed bindings to the attributes so far and tries to extend them. The extension process finds all of the candidates indicated by the `plan` (step `3a`) and uses our `intersect` method to find their intersection (step `3b`). For each extension, we create a totally new and independent binding and stash it in our working list (step `3c`).
+
+### General relational joins
+
+We also took advantage of the fact that graphs have only two directions to index: `forward` and `reverse`. More general relations may require more indices based on the order of attributes. For example:
+
+	query(x0, x1, x2, x3) := edge(x0, x1), edge(x1, x2), edge(x2, x3), 
+	                         other(x0, x1, x2), other(x3, x2, x1)
+
+When we get around to extending `x2` the `other` relation needs to be indexed by its first two coordinates for the first use, and by the third coordinate for the second use. When we extend `x3` we need it indexed by its last two coordinates. If we had re-labeled some variables, we could switch these requirements around however we like. The `other` relation can be indexed six different ways (each attribute and pair of attributes), although we may not need so many. This isn't too different than relational queries, which also keep multiple indices of relations if you use multiple fields as keys, except that the traditional approach needs at most one index per use of a relation, whereas we might revisit the relation multiple times (e.g. our three indices for `other` while only using it twice).
+
+### Measurements 
+
+The code as written up above produces all of the extensions for each attribute in turn, so we don't actually see any results until we are done. Even for directed four-cliques, the most constrained motif on four attributes, the number of results are pretty epic and the time correspondingly large. That .. sucks for trying to figure out whether we are doing a good job or even computing the correct answer or anything like that. So we are going to put that off for the moment.
+
+We should probably change the program somehow so that we produce results in a more continuous fashion...
+
 ## 3. Streaming, data-parallel on static data.
 
 ## 4. Streaming, data-parallel on dynamic data.
