--- a/posts/2016-09-17.md
+++ b/posts/2016-09-17.md
@@ -27,7 +27,7 @@ This is all joint work with [Khaled Ammar](https://khaledammar.com) and [Semih S
 There are some steps to follow to get where we need to go, so we will do this in parts. 
 
 1. [Motifs in graphs. What are they, and how might we compute them?](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#1-motifs-in-graphs)
-2. [Worst-case optimal join computation; the coolest thing to happen to joins in 40 years.]()
+2. [Worst-case optimal join computation; the coolest thing to happen to joins in 40 years.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#2-worst-case-optimal-relational-joins)
 3. [Streaming implementations of worst-case optimal join processing on static data.]()
 4. [Streaming implementations of worst-case optimal join processing on dynamic data.]()
 5. [Evaluating this; show me some numbers!]()
