--- a/posts/2016-09-17.md
+++ b/posts/2016-09-17.md
@@ -29,6 +29,7 @@ There are some steps to follow to get where we need to go, so we will do this in
 1. [Motifs in graphs. What are they, and how might we compute them?](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#1-motifs-in-graphs)
 2. [Worst-case optimal join computation; the coolest thing to happen to joins in 40 years.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#2-worst-case-optimal-relational-joins)
 3. [Streaming implementations of worst-case optimal join processing on static data.]()
+	i. 
 4. [Streaming implementations of worst-case optimal join processing on dynamic data.]()
 5. [Evaluating this; show me some numbers!]()
 
@@ -442,6 +443,448 @@ The code as written up above produces all of the extensions for each attribute i
 We should probably change the program somehow so that we produce results in a more continuous fashion...
 
 ## 3. Streaming, data-parallel on static data.
+
+In this section we will re-organize how we write our motif finding programs to both (i) produce motifs in a continuous manner, and (ii) to partition responsibility for examining the data across multiple workers. 
+
+To achieve these changes we will start using [timely dataflow](https://github.com/frankmcsherry/timely-dataflow), which is great but not strictly necessary. However, once you start working with streaming inputs and data-parallelism your program is sufficiently different from a 20-30 code line snippet that it helps to take advantage of frameworks which hide some of the complexity. Not all frameworks are equally good, and I will try and point out reasons why towards the end.
+
+### Organizing computation
+
+We now have two types of computation for finding motifs. When we started, with triangles and four-cliques, we wrote programs like so:
+
+```rust
+for x0 in 0 .. {
+    for x1 in graph.edges(x0) {
+    	for x2 in intersect( ... )
+	    	for x3 in intersect( ... ) {
+	    		// do something
+	    	}
+	    }
+	}
+}
+```
+
+We then moved to a more general motif finding framework where the number of attributes is not statically known, and re-organized the code like so:
+
+```rust
+let mut bindings = vec![];
+for attr in 0 .. attributes {
+	for binding in bindings {
+		// extend `binding` with x_attr values
+	}
+}
+```
+
+
+Our first approach walks sequentially through each of the candidates, and keeps a quite small amount of information on the stack: current `x0`, `x1`, `x2`, `x3` values, and our progress through each's `intersect` iterators. Our second approach performs all of the work for each attribute before advancing to the next, and requires a relatively large amount of intermediate storage. This change seemed necessary in order to use a data-dependent number of attributes, short of doing code generation, but it does change the behavior of our program. 
+
+These two approaches compute the same thing, and really do the same elemental computations, but just in a different order. They are roughly analogous to exploring the set of motifs depth-first (the first approach) and breadth first (the second approach). Our transition to "streaming" and "parallel" is going to have some of the same flavor: doing the same computations, just in different (or in some cases unspecified) orders.
+
+Data-parallel dataflow programming is largely about expressing your program to reveal these opportunities to re-order computation. 
+
+### Streaming
+
+In the first program above, we have an outer loop over the values of `x0`. We process all `x0` bindings with some value before advancing to any of the bindings with the next value. Moveover, the processing of each value is independent from that of other values. We could stop working on any one binding and start working on another, as we see fit.
+
+One way to express this flexibility is through *dataflow*, a style of programming in which availability of data drive the computation. All bits of code express what should happen when data arrive, and these bits of code are connected by queues of data. Computation happens as the data "flow" through the directed graph. However, the program does not specify which bits of code run when, which gives a system the flexibility to start and stop bits of code as it deeps appropriate (for example, some code produces too much data and we need to run the consumer).
+
+Let's try to rewrite our simplest triangles computation using dataflow. Recall that the program looks something like
+
+```rust
+// for each (x0, x1) pair, find and intersect candidates
+for (x0, x1) in graph.edges() {
+	let candidates0 = forward(x0);
+	let candidates1 = forward(x1);
+	for x2 in intersect(candidates0, candidates1) {
+		// do something ...
+	}
+}
+```
+
+We can re-imagine this computation as a stream of `(x0, x1)` values, where each time we receive a new pair we need to perform some more work. Let's sketch the computation using timely dataflow streams, and its built-in operator `map` which applies a one-to-one function independently on records.
+
+```rust
+let edges = graph.edges();
+
+// for each (x0, x1) pair, find and intersect candidates
+let result = edges.map(|(x0, x1)| {
+	let candidates0 = forward(x0);
+	let candidates1 = forward(x1);
+	// return their intersection, as data
+	(x0, x1, intersect(candidates0, candidates1))
+});
+
+result.map(|(x0, x1, x2s)| {
+	for x2 in x2s {
+		// do something ...
+	}
+});
+```
+
+This change seems relatively minor. We have taken the body of the `for` loop and put it in the `map` operator. However, we have made a strong statement to the timely dataflow runtime that it has the flexibility to run the computation as it sees fit. For example, it could pick up batches of 1,000 pairs and do the work for each, retiring the pairs with a bounded memory footprint. Timely dataflow is also able to start up multiple worker threads and have them produce triangles concurrently.
+
+The code above does well at breaking down the work of triangle computation into smaller pieces, which can result in more efficient execution. However, it still has some short-comings we will want to fix, whose improvement will let us scale to larger graphs and support graphs whose edges come and go.
+
+### Data Parallelism
+
+Data parallelism is used to describe techniques that process disjoint sets of data, allowing them to both read and write concurrently without complicated coordination. Our dataflow program above is data-parallel in the sense that each edge is processed independently, but not in the sense that each worker requires full access to the `forward` index (and would require the full `reverse` index had we used it). 
+
+The most common way to achieve data-parallelism is by upgrading the data queues between dataflow operators so that they "exchange" data rather than just enqueue it. Where one worker may push some data into the queue, another worker may be the one that recovers it, *depending on the data*. Most commonly, one supplies a function that is applied to each record, whose results indicate which worker should receive the record. These exchange queues allow us to route data to specific workers so that each can avoid maintaining redundant copies of, for example, the `forward` index.
+
+This sound like fun. Let's use timely dataflow's `exchange` operator to shuffle the edges!
+
+This is a bit harder than it sounds. If we hope to partition the data of `forward` so that the neighbors of each vertex live at exactly one worker, then there is no routing function that lets us route `(x0, x1)` to one specific worker. The two values of `x0` and `x1` may have their data at separate workers, which means .. is data-parallelism not going to work?
+
+Of course it will work! We just need to reduce our computation even further. Rather than fully processing `(x0, x1)` in a single `map` statement, which we will find difficult due to the partitioning of `forward` data, we can break it into two steps: first look up the edges of `x0` (by exchanging keyed on `x0`) and second look up the edges of `x1` (by exchanging keyed on `x1`).
+
+```rust
+let stream = graph.edges();
+
+// exchange (x0, x1) pairs to look up x0 candidates.
+let stage0 = stream.exchange(|&(x0, _)| x0 % num_workers)
+                   .map(|(x0, x1)| (x0, x1, forward(x0)));
+
+// exchange (x0, x1, c0) pairs to look up x1 candidates.
+let stage1 = stream.exchange(|&(_, x1, _)| x1 % num_workers)
+                   .map(|(x0, x1, c0)| (x0, x1, c0, forward(x1)));
+
+// intersect candidates
+let result = stage1.map(|(x0, x1, c0, c1)| 
+	intersect(candidates0, candidates1).map(|x2| (x0, x1, x2))
+)
+result.map(|(x0, x1, x2)| /* do something ... */);
+```
+
+This code exchanges `(x0, x1)` pairs using `x0` as a key and then looks up `forward(x0)`. The code adds these edges *as data* and exchanges the result using `x1` as a key, then looking up and intersecting with `forward(x1)`. The code has the property that if there were multiple workers, each worker only has to look up keys in `forward` with the same modulus as the worker's index. This partitions the use of `forward` between all of the workers: each worker maintains a roughly `1/num_workers` fraction of the index.
+
+This is nice. However, it still has an issue. We were very careful to write `intersect` so that it took time proportional to the smaller candidate set, which it did by looking up each set and checking out their lengths before walking through either. In the code above we grab the candidates for `x0` and then ship *all* of them to another worker. If this were just a pointer and length, no harm right?* On the other hand, if the data need to go to a worker on a remote machine we would need to serialize the data, and may have just performed enough work to screw up the mathematical properties we relied on.
+
+*: Even if it is just a pointer and a length handed to a worker on the same machine, Rust is going to (rightly) flip out and complain that you have no reason to believe that the memory will still be valid when the other worker gets around to processing it. You somehow need to prove that what you are communicating will be valid when received, which typically involves one of (i) copying it, (ii) some reference counting, (iii) lying and hoping that you don't get caught out by something you didn't understand. As someone who works with data-driven programming I really like Rust's commitment to ownership, as it makes it very clear when you are attempting something naughty and you feel relatively safe that your code behaves as written, once it builds at all.
+
+### Doing it right
+
+Let's recall what we actually wanted our computer to do with the candidate sets. Although we get handles to the candidate sets earlier, we are really interested in: first the length of each, and second the contents of the shorter. We should make that explicit, rather than a fortunate consequence of how our program was interpreted (e.g. that `forward(x)` only returns a pointer and length).
+
+```rust
+let edges = graph.edges();
+
+// first determine the sizes of `forward(x0)` and `forward(x1)`.
+let sizes0 = edges.exchange(|&(x0, _)| x0 % num_workers)
+                  .map(|(x0, x1)| (x0, x1, forward(x0).len()));
+
+let sizes1 = edges.exchange(|&(x0, _, _)| x1 % num_workers)
+                  .map(|(x0, x1, s0)| (x0, x1, s0, forward(x1).len()));
+
+// partition the data based on which attribute will propose.
+let route0 = sizes1.filter(|&(_, _, s0, s1)| s0 < s1);
+let route1 = sizes1.filter(|&(_, _, s0, s1)| s0 >= s1);
+
+// handle route0 records by x0 proposing then x1 intersecting
+let stage00 = route0.map(|(x0, x1, _, _)| (x0, x1));
+					.exchange(|&(x0, _)| x0 % num_workers)
+                    .map(|(x0, x1)| (x0, x1, forward(x0)))
+                    .exchange(|&(_, x1, _)| x1 % num_workers)
+                    .map(|(x0, x1, c0)| (x0, x1, intersect(c0, forward(x1))));
+
+// handle route1 records by x1 proposing then x0 intersecting
+let stage10 = route1.map(|(x0, x1, _, _)| (x0, x1));
+					.exchange(|&(x0, _)| x1 % num_workers)
+                    .map(|(x0, x1)| (x0, x1, forward(x1)))
+                    .exchange(|&(_, x1, _)| x0 % num_workers)
+                    .map(|(x0, x1, c1)| (x0, x1, intersect(c1, forward(x0))));
+
+// stitch the two routes back together.
+let result = stage01.concat(stage11).flat_map(|(x0, x1, x2s)| 
+	x2s.map(|x2| (x0, x1, x2))
+)
+result.map(|(x0, x1, x2)| /* do something ... */);
+```
+
+This may look pretty beastly, but it is what we want our computer to do, right?
+
+#### Some comments
+
+Let me take a moment to try and argue that writing your programs like this, perhaps not exactly in this language with this many symbols, is a healthy thing to do. Even with just one worker and no parallelism, we have explained the available *concurrency*: opportunities to re-order how things are run. This flexibility can have some serious potential upsides. Here are some examples:
+
+1. Our vanilla triangle finding code decided which of `x0` and `x1` it should use to propose candidates as it goes, meanining there is a conditional in the middle of the main loop. We are able to separate edges using `x0` from edges using `x1`, and run code fragments without a conditional test in their heart. In each of these fragments we are now doing the same thing each iteration, which makes caching and re-using results a great deal simpler. To the extent that branch mis-prediction was hurting pre-fetching that should be improved now too.
+
+2. Each batch of requests for `forward(x0)` and `forward(x1)` can be re-ordered to improve locality. We can get "more sequential" memory access rather than accesses all over the place, which [can really help](https://github.com/frankmcsherry/blog/blob/master/posts/2015-08-15.md). In the surprisingly common case where we have many of the same values for `x0` and `x1`, for example we are processing all edges to or from one node, then putting these requests in sequence allows us to re-use their results (we do so explicitly in the fully dynamic case).
+
+3. The amount of work we want to process at a time (batch size) may change with the data. Some times we may want to grab 1,000 edges and work with them, for the reasons above, and some times 1,000 edges may result in 1,000,000,000 triangles and so we'd like to work with slightly fewer. We have the ability to modulate the amount of work we do in each block of code, rather than committing to either no batching (very first approach) or batch everything (second approach we wrote).
+
+I think it is great for us to have explained all of these aspects of our program, though it is a different question whether a system can meaningfully exploit this information. Also, could we have done it with fewer symbols, maybe?
+
+### Trying out triangles
+
+There is a handy data-parallel dataflow implementation that has been up for a while, at [frankmcsherry/dataflow-join](https://github.com/frankmcsherry/dataflow-join). We can use it with our `livejournal` and `twitter_rv` graph datasets to find directed triangles (or four-cliques, five-cliques, etc-cliques). It isn't written to do general motifs, but we will get there in the next section. The program takes a `forward` index (as a file) and a batch size, and introduces all nodes in batches of this size.
+
+Recall from above that the single threaded version finds all directed triangles in `livejournal` in about 40 seconds. Let's just run the `dataflow-join` example program `triangles` on `livejournal` using 1,000 nodes at a time.
+
+	Echidnatron% cargo run --release --example triangles -- ~/Projects/Datasets/soc-LiveJournal1 inspect 1000
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/soc-LiveJournal1 inspect 1000`
+	...
+	count: 946400853 @ Duration { secs: 66, nanos: 781511131 }
+	Echidnatron%
+
+The number is correct! It printed a great deal of other things too, over 4,800 batches. Let's look at it again without all the printing (which also disables the counting, which is where some of the time is spent):
+
+	Echidnatron% time cargo run --release --example triangles -- ~/Projects/Datasets/soc-LiveJournal1 no 1000
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/soc-LiveJournal1 no 1000`
+	cargo run --release --example triangles --  no 1000  54.42s user 2.61s system 100% cpu 57.024 total
+	Echidnatron%
+
+That is 57 seconds; not quite 40 seconds yet. That makes some sense, because we are doing more things than just blasting through all triangles with a few compiled loops (we are buffering things up, moving control around between the operators, and [other horrible things](https://github.com/frankmcsherry/blog/blob/master/posts/2015-12-19.md)). I made some funny sounds just above about how life would automatically be better by writing your program this way, and apparently that wasn't exactly true as written.
+
+Let's add a second worker, because we did parallelism for a reason.
+
+	Echidnatron% time cargo run --release --example triangles -- ~/Projects/Datasets/soc-LiveJournal1 no 1000 -w2
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/soc-LiveJournal1 no 1000 -w2`
+	cargo run --release --example triangles --  no 1000 -w2  59.63s user 2.38s system 196% cpu 31.481 total
+	Echidnatron%
+
+Ok great, 31.5 seconds. Nearly twice as fast. The [COST](https://github.com/frankmcsherry/blog/blob/master/posts/2015-01-15.md) here is just two threads, and by a pretty safe margin.
+
+What about four workers? I only have two cores, but with the random accesses into the indices, hyper-threading could help.
+
+	Echidnatron% time cargo run --release --example triangles -- ~/Projects/Datasets/soc-LiveJournal1 no 1000 -w4
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/soc-LiveJournal1 no 1000 -w4`
+	cargo run --release --example triangles --  no 1000 -w4  85.55s user 2.54s system 369% cpu 23.816 total
+	Echidnatron%
+
+Down to 23.8 seconds. Not exactly linear scaling, but we didn't really add twice the resources either.
+
+---
+
+I should come clean and say that scaling in this sort of computation is a real beast of a problem. We are used to thinking about problems like pagerank and wordcount, where the amount of work for each worker is pretty easily understood (proportional to the number of edges / words each worker manages). Motif finding, even triangles, can have weirdly unfair skew: high degree nodes participate in many triangles, and in the case of our algorithm end up doing lots of `intersect` computations because they lose all the "candidate proposal" fights due to their long lengths. We do less work over all, but it may tend to occur where the highest degree vertices live.
+
+Just because something is written as data-parallel dataflow doesn't mean it will have linear scaling. We may need to re-think the program to give it better scaling properties. We have done a bit of work on this, and I'll get to it later on, but be aware that actual performance may or may not be greatly improved as the number of workers increases.
+
+---
+
+We can also do the measurements for `twitter_rv`, which originally produced (after 3.6 hours):
+
+	triangles: 143011093363 in: Duration { secs: 12977, nanos: 592176810 }
+
+Here are the reports on one, two, and four threads:
+
+** TODO: DO THESE, EVEN THOUGH THEY TAKE A WHILE **
+
+### Streaming?
+
+The batch size argument controls how many `x0` values our program introduces before it sits back and waits. This in turn controls how long we wait before we see any output, and to some degree how long the whole computation takes (small batches introduce overhead, but large batches risk running us out of memory). Let's re-examine the output from up above, where I replace slightly less of the output with `...`:
+
+	Echidnatron% cargo run --release --example triangles -- ~/Projects/Datasets/soc-LiveJournal1 inspect 1000
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/soc-LiveJournal1 inspect 1000`
+	count: 385726 @ Duration { secs: 0, nanos: 288497368 }
+	count: 785827 @ Duration { secs: 0, nanos: 363069351 }
+	count: 1071377 @ Duration { secs: 0, nanos: 437563966 }
+	count: 1369000 @ Duration { secs: 0, nanos: 532887637 }
+	count: 1743370 @ Duration { secs: 0, nanos: 590076839 }
+	count: 2032510 @ Duration { secs: 0, nanos: 684989135 }
+	count: 2607015 @ Duration { secs: 0, nanos: 759143628 }
+	count: 2957975 @ Duration { secs: 0, nanos: 834344081 }
+	count: 3348587 @ Duration { secs: 0, nanos: 889717561 }
+	count: 3635621 @ Duration { secs: 1, nanos: 51602924 }
+	count: 4230639 @ Duration { secs: 1, nanos: 139536392 }
+	count: 4682313 @ Duration { secs: 1, nanos: 202587083 }
+	...
+	count: 946400853 @ Duration { secs: 66, nanos: 781511131 }
+	Echidnatron%
+
+Our computation produces accumulated triangle counts for each batch of 1,000 vertices. It is doing this without waiting for all of the input, but is nonetheless clear about the partial information it is showing us: exact accumulated counts for each batch of 1,000 vertices. Although not complete we can do whatever we like with this partial information, for example get excited about how the numbers look good.
+
+We get the sense from these numbers that we can plow through 1,000 vertices in a fraction of a second, on one just thread. There are about 68 million edges in `livejournal`, which means that over the course of the 66 seconds above we are grinding through about one million `(x0, x1)` pairs per second, again with one thread. With two threads, in half the time, we process more than two million edges.
+
+These numbers depend entirely on the structure of the graph, which determines how many triangles there are in each part of the graph. For example, the `twitter_rv` graph has some 1.5 billion edges and our vanilla code took three and a half hours, which is a less impressive rate of about 115,589 edges per second. Here is the beginning of our computation on `twitter_rv`, using batch sizes of one vertex at a time (a much smaller batch size!):
+
+	Echidnatron% cargo run --release --example triangles -- ~/Projects/Datasets/twitter_rv inspect 1
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/twitter_rv inspect 1`
+	count: 18570438 @ Duration { secs: 12, nanos: 461604308 }
+	count: 45653891 @ Duration { secs: 25, nanos: 969997334 }
+	count: 45923382 @ Duration { secs: 26, nanos: 108039502 }
+	count: 46603571 @ Duration { secs: 26, nanos: 394974822 }
+	count: 46608327 @ Duration { secs: 26, nanos: 397154766 }
+	count: 46843428 @ Duration { secs: 26, nanos: 503820835 }
+	count: 47036670 @ Duration { secs: 26, nanos: 599466048 }
+	count: 89762911 @ Duration { secs: 48, nanos: 158951288 }
+	count: 90126309 @ Duration { secs: 48, nanos: 331441480 }
+	...
+
+This looks (and is) a lot less fluid, in part because we are introducing data in larger bursts. The degrees in the `twitter_rv` data can be much larger (up to three million), and a single vertex can result in a great number of new triangles. The very first node, for example, appears as `x0` in 18,570,438 directed triangles, the second node in 27,083,453 directed triangles. The third node appears as `x0` in only 269,491 directed triangles, the discovery of which takes proportionately less time.
+
+---
+
+Remember that comment about skew, and how things may not go faster just because we wrote them in a distributed framework? This is totally demonstrated if we add a second worker to the setting just above:
+
+	Echidnatron% cargo run --release --example triangles -- ~/Projects/Datasets/twitter_rv inspect 1 -w2
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/twitter_rv inspect 1 -w2`
+	count: 1939869 @ Duration { secs: 10, nanos: 766975396 }
+	count: 16630569 @ Duration { secs: 10, nanos: 768873286 }
+	count: 19238588 @ Duration { secs: 23, nanos: 667188763 }
+	count: 26415303 @ Duration { secs: 23, nanos: 670505219 }
+	count: 26454233 @ Duration { secs: 23, nanos: 803005841 }
+	count: 19469149 @ Duration { secs: 23, nanos: 803266431 }
+	count: 19570120 @ Duration { secs: 24, nanos: 54505172 }
+	count: 27033451 @ Duration { secs: 24, nanos: 54924556 }
+	...
+
+There are two lines for each round (two workers) but the point is that things aren't going much faster. The first round took 12 seconds with one worker thread, and now takes 10 seconds. Well done.
+
+If we look at the first two lines, the counts for the triangles of that first vertex produced by the two workers, we see a huge difference between the number of triangles produced at each worker:
+
+	count: 1939869 @ Duration { secs: 10, nanos: 766975396 }
+	count: 16630569 @ Duration { secs: 10, nanos: 768873286 }
+
+This makes some sense. With a batch size of one, in each round there is only one value of `x0`. This means that roughly half of the work to do (related to `x0` proposals) is pegged to one worker. If we think of `x1` as evenly distributed across workers, we have one worker doing 75% of the work and the other worker doing 25%. More generally one worker out of `n` would do a `1/2 + 1/2n` fraction of the work, and all other workers would do a `1/2n` fraction of the work. That sucks! 
+
+And, in this case `x0` had a stupidly high degree (it must be at least sqrt(18570438), right?) so that worker ends up doing most of the intersection work. The other worker will only do intersection work for neighbors with higher degrees (and only those it hosts). As it turns out, intersection is much more expensive than proposing (which ends up being a `memcpy` in this implementation). The only positive is that because "streaming" the system can overlap one worker proposing with the other worker intersecting, an instance of a third form of parallelism called "pipeline parallelism".
+
+The numbers get a bit better if we increase the batch size:
+
+	Echidnatron% cargo run --release --example triangles -- ~/Projects/Datasets/twitter_rv inspect 2 -w2
+	     Running `target/release/examples/triangles /Users/mcsherry/Projects/Datasets/twitter_rv inspect 2 -w2`
+	count: 19238588 @ Duration { secs: 18, nanos: 421999694 }
+	count: 26415303 @ Duration { secs: 18, nanos: 424508728 }
+	count: 19570120 @ Duration { secs: 18, nanos: 691085756 }
+	count: 27033451 @ Duration { secs: 18, nanos: 691177402 }
+	...
+
+The 26 seconds for one worker to finish the first two rounds, which dropped to only 23 seconds with batch size one, now drops to 18 seconds. It's still not close to perfect, with smaller skew between reported triangle counts still clearly present. We will probably have to change the algorithm if we really want to get decent scaling properties.
+
+Skew is a much different beast in streaming computations than in batch computations, because you have much shorter timescales over which to hide any imbalances.
+
+---
+
+### Implementation details
+
+I have talked through how the code we just evaluated is implemented [before](https://github.com/frankmcsherry/blog/blob/master/posts/2015-04-11.md), and it has not changed much since then. Nonetheless, it is worth reviewing, because we are going to be tweaking it to get our fully dynamic motif tracking off the ground.
+
+The rough structure of the code follows the lines of our second "more-general" single-threaded approach, applied to the dataflow pattern of "count first, then propose, then intersect" we used for triangles counting. For each attribute, starting from a stream of bindings to prior attributes, we build the dataflow graph that elicits counts of candidate set sizes, partitions the bindings by the index that should propose the candidates, and the intersects each using the other indices.
+
+Here is the actual code used to extend a binding with an additional attribute. This method adds takes a stream of "prefixes" of type `P` and turns each into a pair `(P, Vec<E>)` of the prefix and its "extensions": valid settings of the next attribute. It uses a trait `StreamPrefixExtender` that wraps some methods (`count`, `propose`, and `intersect`) lifted to streams of bindings, which is how we wrap up the constraints on the extensions in terms of the data in each prefix.
+
+```rust
+// A layer of GenericJoin, in which a collection of prefixes are extended by one attribute
+impl<G: Scope, P: Data> GenericJoinExt<G, P> for Stream<G, P> {
+    fn extend<E: Data>(self, extenders: Vec<&StreamPrefixExtender<G, Prefix=P, Extension=E>>)
+        -> Stream<G, (P, Vec<E>)> {
+
+        // for each prefix, determine extender with fewest extensions.
+        let mut counts = self.map(|p| (p, 1 << 31, 0));
+        for (index, extender) in extenders.iter().enumerate() {
+            counts = extender.count(counts, index as u64);
+        }
+
+        // partition prefixes by the index of smallest extender.
+        let parts = counts.partition(extenders.len() as u64, |(p, _, i)| (i, p));
+
+        let mut results = Vec::new();
+        for (index, nominations) in parts.into_iter().enumerate() {
+
+        	// propose extensions, and then validate against other extenders.
+            let mut extensions = extenders[index].propose(nominations);
+            for other in (0..extenders.len()).filter(|&x| x != index) {
+                extensions = extenders[other].intersect(extensions);
+            }
+
+            results.push(extensions);    // save extensions
+        }
+
+        self.scope().concatenate(results)
+    }
+}
+```
+
+More concretely, the code first tracks for each prefix a triple `(prefix, count, index)` of the smallest count for each prefix and the index of the corresponding extender. These values are initially junk, with a badly chosen large count (shush!), but by passing through each extender's `count` method they are improved to track the smallest values. The result is the stream of `(prefix, count, index)` triples containing the smallest counts and corresponding indices.
+
+As in our triangles example, this stream is partitioned by the `index` indentifying the constraint with the smallest candidate set size. For each of these parts, the extender proposes candidates in `propose`, and we pass the lists of candidates through the other relations in `intersect`. We then concatenate everything back together and return the result.
+
+Each application of this method, `extend`, produces a stream of elements of type `(P, Vec<E>)`: pairs of prefixes and each of the extensions they yielded. If we flatten these down into say pairs `(P, E)` we can repeat the process and produce more complicated motifs.
+
+--- 
+
+Here is the first half of `triangles.rs` where we build up a dataflow graph that extends initial `x0` settings twice: first to pairs `(x0, x1)` and then to triples `(x0, x1, x2)`. It uses as extenders pairs of the forward index `graph` and functions to indicate which field of the prefix they want to use as a key. I've trimmed out some argument parsing and output printing and stuff like that.
+
+```rust
+fn main () {
+    timely::execute_from_args(std::env::args(), |root| {
+        let graph = Rc::new(GraphMMap::<u32>::new(&filename));
+        let (mut input, probe) = root.scoped(|builder| {
+
+        	// exogenous input of `x0` variables.
+            let (input, nodes) = builder.new_input::<u32>();
+
+            // extend to pairs, then to triangles, perhaps beyond ...
+            let pairs = nodes.extend(vec![&graph.extend_using(|&a| a as u64)]);
+            let trigs = pairs.flat_map(|(p, es)| es.into_iter().map(move |e| (p, e)))
+                             .extend(vec![&graph.extend_using(|&(a,_)| a as u64),
+                                          &graph.extend_using(|&(_,b)| b as u64)]);
+
+            // // four cliques?
+            // let quads = trigs.flat_map(|(p,es)| es.into_iter().map(move |e| (p, e)))
+            //                  .extend(vec![&graph.extend_using(|&((a,_),_)| a as u64),
+            //                               &graph.extend_using(|&((_,b),_)| b as u64),
+            //                               &graph.extend_using(|&((_,_),c)| c as u64)]);
+
+            (input, trigs.probe().0)
+        });
+```
+
+This starts with some standard (though non-obvious) timely dataflow boilerplate, where the important bits from our point of view are:  We create a new input `nodes` that supplies a stream of `x0` values. We then use our `extend` functionality to turn `nodes` into `pairs`, and `pairs` into `trigs`, and optionally `trigs` into `quads`. We return the other end of the `nodes` input as well as a probe at the end of `trigs` which will tell us whether there is still data in flight. We don't actually do anything with the data, but we do produce it (we count it in most examples, but I snipped that code out as unhelpful).
+
+One sneaky thing occurs when we use the `extend_using` method. This is what takes an index, here the forward edge index, and a function to extract a field from whatever tuples are flying by. For example, when we have pairs `(x0, x1)` the code 
+
+```rust
+    .extend(vec![&graph.extend_using(|&(a,_)| a as u64),
+                 &graph.extend_using(|&(_,b)| b as u64)]);
+```
+
+puts together two extenders, both using the `graph` index, but varying in which field each uses in order to produce candidates (respectively `x0` and `x1`). For some reason they need to be `u64`s. Anyhow, this is handy in that it lets us define the index once and re-use it throughout the computation, rather than creating a new copy of the index each time we need a new instance of it (three times in this example). This is going to be a big deal when we get to the fully dynamic case, where things get a bit more complicated.
+
+Having defined the computation, we run it by repeatedly introducing `step_size` many nodes identifiers and then running the computation until it quiets down:
+
+```rust
+        for node in 0 .. (graph.nodes() - 1) {
+        	if root.index() == 0 {
+	        	input.send(candidate as u32);
+	        }
+        	if (node % step_size) == step_size - 1 {
+	            input.advance_to(round as u64 + 1);
+	            root.step_while(|| probe.lt(&input.time()));
+	        }
+	    }
+    }).unwrap();
+}
+```
+
+This has worker 0 introduce all the identifiers (we only want one instance of each node id, not one from each worker). Every `step_size` steps we advance the input epoch and wait for records to drain. Timely also automatically does this for us when it shuts down, so we don't need a second copy of that code outside the loop.
+
+That's pretty much it. It's not wildly complicated, but will certainly get a bit more so when we start trying to change the contents of `forward`, which we will do in the very next post!
+
+### Differences between frameworks
+
+I promised I would say something about different data-parallel frameworks, and while I'm generally opposed to making limiting statements about other folks (they might have improved while I was napping!), there are some qualitative differences between *approaches* that make each more or less suitable than the others.
+
+#### Batch processors
+
+Systems like Hadoop and Spark operate in batch. You point them at a large pile of input data, describe what you'd like done, and wait for them to finish up. This isn't so bad if the computation either (i) reduces the input data or (ii) does work linear in the input data. When you have a computation like motif finding, where the output can be quadratic or beyond in the size of the input, these systems start to fall over.
+
+These systems generally assume that it is safe to materialize intermediate state, because .. I'm not sure. Because that is how word count works, I guess. As we saw way back when, triangles on `twitter_rv` considers some 754,462,139,483 candidate triples. That could be as large as 
+
+	  754,462,139,483 x 12 bytes
+    = 9,053,545,673,796 bytes
+
+Nine terabytes just to write down the candidates to visit. 
+
+And yet, this ran just fine on my laptop, using at most a few GB of memory.
+
+There is a *serious* difference between batch processors and stream processors on computations that can produce and retire work without synchronizing. It is much, *much*, ***much*** faster to produce and consume data without it leaving your processor core or cache than to spill it all to main memory or disk. Streaming data across the network (and consuming it) is much more likely to happen successfull than accumulating all of the data in local memory first, especially in the multi-terabyte range. The flexibility of stream processing can make your computations much faster, and much less likely to fall over due to resource exhaustion.
+
+This is why you should be considering stream processors rather than batch processors.
+
+#### Stream processors
+
+The good news is that there are stream processors. [Apache Flink](https://flink.apache.org) is a good example. [Spark Streaming](http://spark.apache.org/streaming/) is a less-good example. [Timely dataflow](https://github.com/frankmcsherry/timely-dataflow) is a !@#$ing amazing example. Each of these is slightly different from the other. Now isn't the right time to get in to the differences between these systems, because (i) I'm not really an expert on most of them (not having infinity machines to run the JVM-based approaches), and (ii) they each have their own thing they try to excel at. I will say that something like motif finding, with its non-trivial dataflow and where the sizes of intermediate data vary amazingly, is probably a good test to separate the stream processors from the mini-batch processor. 
 
 ## 4. Streaming, data-parallel on dynamic data.
 
