--- a/posts/2016-09-17.md
+++ b/posts/2016-09-17.md
@@ -28,7 +28,7 @@ There are some steps to follow to get where we need to go, so we will do this in
 
 1. [Motifs in graphs. What are they, and how might we compute them?](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#1-motifs-in-graphs)
 2. [Worst-case optimal join computation; the coolest thing to happen to joins in 40 years.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#2-worst-case-optimal-relational-joins)
-3. [Streaming implementations of worst-case optimal join processing on static data.]()
+3. [Streaming implementations of worst-case optimal join processing on static data.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-09-17.md#3-streaming-data-parallel-on-static-data)
 	i. 
 4. [Streaming implementations of worst-case optimal join processing on dynamic data.]()
 5. [Evaluating this; show me some numbers!]()
